--- a/Tarea 1/Script.Rmd
+++ b/Tarea 1/Script.Rmd
@@ -223,3 +223,6 @@ La segunda curva enseña lo mismo con la excepcion de que su eje x no muestra la
 ## Analisis de las esperanzas
 Con las tablas de esperanza se puede notar un mismo comportamiento en las poblaciones femeninas y masculinas, donde segun avanza la edad disminuye los años restantes de esperanza de vida, y se nota la diferencia de las poblaciones por genero donde la poblacion femenina tiene una esperanza un poco mayor. 
 
+
+### Acesso al github
+https://github.com/MonicaHB00/Contin.git
