--- a/Tarea 4/Tarea 4.Rmd
+++ b/Tarea 4/Tarea 4.Rmd
@@ -19,50 +19,59 @@ library(ggplot2)
 
 ```{r}
 Base_de_datos <- read_excel("Base de datos.xlsx")
+str(Base_de_datos)
 ```
 
 ```{r}
 tavid2000_2150 <- read_excel("~/GitHub/Contin/Tarea 2/tavid2000-2150.xls")
 tavid2000_2150<-tavid2000_2150%>%mutate(qx=as.numeric(qx))
+str(tavid2000_2150)
 ```
 
 # Creacion de Funciones 
 
 ```{r}
-kpx <- function(x, k, qx, w) {
-  if (k == 0) {
-    return(1)  # Si k es igual a cero, devuelve 1
-  } else {
-    if ((x + k) <= w) {
-      px <- 1
-      for (i in 1:(k + 1)) {
-        px <- px * (1 - qx[x + i])  # Calcula el producto de (1 - qx[x + i]) para i en 1 hasta k+1
-      }
-      return(px)  # Devuelve el resultado del producto
-    } else {
-      return(0)  # Si (x + k) es mayor que w, devuelve 0
-    }
-  }
+kpx <- function(x, k, sx, w = 115) {
+ if(x+k>115){
+   px=0
+ }else{
+  añoNac = 2024 - x
+  ysub = ifelse(añoNac +x+ k  < 2150, añoNac +x+ k, 2150)
+  print(x)
+  print(k)
+  print(sx)
+  print(añoNac)
+  print(ysub)
+  tabla <- tavid2000_2150 %>% filter(ynac == añoNac, year == ysub, sex == sx)
+  print(tabla)
+  px <- 1 - tabla$qx[[1]]
+ }
+  return(px)
 }
 ```
 
 
 ```{r}
-qx_diferida<-function(u,t,qx,x,w){
-  return( kpx(x, u , qx, w)-kpx(x, u+t, qx, w))
+qx_diferida<-function(u,t,x,sx){
+  return( kpx(x, u,sx)-kpx(x, u+t,sx))
 }
 
 ```
 
 ```{r}
-Axn<-function(interes,genero,edad,n=w,inflación=0,inicial=0){
-  qx
-  imod<-(1-interes)/(1+inflación)-1
-  v<-1/(1+imod)
- 
-  Suma<-0
-  for(l in inicial:n){
-    Suma<-Suma+v^(l+1)*kqxdiferido(k,x,genero)
+Axn <- function(interes,
+                genero,
+                edad,
+                n = 115,
+                inflación = 0,
+                inicial = 0) {
+  
+  imod <- (1 - interes) / (1 + inflación) - 1
+  v <- 1 / (1 + imod)
+  
+  Suma <- 0
+  for (l in inicial:n) {
+    Suma <- Suma + v ^ (l + 1) * qx_diferida(l, 1, edad, genero)
   }
   return(Suma)
 }
@@ -71,24 +80,61 @@ Axn<-function(interes,genero,edad,n=w,inflación=0,inicial=0){
 ```{r}
 Prima<-function(SumaAsegurada,ed,gen,corte_n,corte_m,int=0.06,inf=0){
  
-  imod<-(1-interes)/(1+inflación)-1
+  imod<-1-(1-int)/(1+inf)
   v<-1/(1+imod)
   d<-1-v
  
-  E_B1<-1*SumaAsegurada*Axn(int,gen,ed,n=49)
-  E_B2<-2*SumaAsegurada*Axn(int,gen,ed,inicial = 49)
-  E_B3<-0.05*SumaAsegurada*v^corte_n*npx(corte_n,ed)
+  E_B1<-1*SumaAsegurada*Axn(imod,gen,ed,n=49)
+  E_B2<-2*SumaAsegurada*Axn(imod,gen,ed,inicial = 49)
+  E_B3<-0.05*SumaAsegurada*v^corte_n*kpx(corte_n,ed,gen)
  
-  E_P<-(1-Axn(interes=int,genero=gen,edad=ed,n=corte_m,inflación = inf))/d
+  E_P<-(1-Axn(interes=imod,genero=gen,edad=ed,corte_m=corte_m,inflación = inf))/d
  
   Denominador<-E_B1+E_B2+E_B3
- 
-  result(Denominador/E_P)
+  return(Denominador/E_P)
 }
 ```
 
 ```{r}
-BaseDeDatos%>%mutate((PrimaValorSinInflación = Prima(SumaAsegurada = 'Suma Asegurada',ed= 'Edad actual',gen= 'Sexo',corte_n=n,corte_m = m),
-                       PrimaValorConInflacion=Prima(SumaAsegurada = 'Suma Asegurada',ed= 'Edad actual',gen= 'Sexo',corte_n=n,corte_m = m, inf=0.02)
- 
+imod<-1-(1-0.06)/(1+0.02)
+  v<-1/(1+imod)
+  d<-1-v
+
+Base_de_datos <- Base_de_datos %>%
+  rowwise() %>%
+  mutate(
+    Sexo=ifelse(Sexo=="F",2,1),
+    inf=0,
+    imod = 1- (1 - 0.06) / (1 + inf) ,
+    v = 1 / (1 + imod),
+    d=1-v,
+    E_B1 = 1 * `Suma Asegurada` * Axn(imod, Sexo, `Edad actual`, n = 49),
+    E_B2 = 2 * `Suma Asegurada` * Axn(imod, Sexo, `Edad actual`, inicial = 49),
+    E_B3 = 0.05 * `Suma Asegurada` * v ^ n * kpx(`Edad actual`, n, Sexo),
+    E_P = (1-Axn(interes=imod,genero=Sexo,edad=`Edad actual`,corte_m=m,inflación = inf))/d,
+    PrimaValorSinInflación = Prima(
+      SumaAsegurada = `Suma Asegurada`,
+      ed = `Edad actual`,
+      gen = Sexo,
+      corte_n = n,
+      corte_m = m
+    ),
+    crecimiento=0.02,
+    imod2 = 1- (1 - 0.06) / (1 + inf) ,
+    v2 = 1 / (1 + imod2),
+    d2=1-v2,
+    E_B1.2 = 1 * `Suma Asegurada` * Axn(imod2, Sexo, `Edad actual`, n = 49),
+    E_B2.2 = 2 * `Suma Asegurada` * Axn(imod2, Sexo, `Edad actual`, inicial = 49),
+    E_B3.2 = 0.05 * `Suma Asegurada` * v ^ n * kpx(`Edad actual`, n, Sexo),
+    E_P.2 = (1-Axn(interes=imod,genero=Sexo,edad=`Edad actual`,corte_m=m,inflación = inf.2))/d.2,
+    PrimaValorConInflacion = Prima(
+      SumaAsegurada = `Suma Asegurada`,
+      ed = `Edad actual`,
+      gen = Sexo,
+      corte_n = n,
+      corte_m = m,
+      inf = 0.02
+    )
+  ) %>%
+  ungroup()
 ```
